
[package]
name = "hft-market-maker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-arg=-zstack-size=1048576",
]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Performance",
]
